chore(gitignore): Ignore datasets
Ignore dataset created by Hydra config files and those in the data foldoer.

BREAKING CHANGE:

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
+## Data ## 
+
+data/
+
+## Hydra ## 
+outputs/
+
 ## macOS ##
 
 .DS_Store
