--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,11 @@ transformers = "4.33.1"
 datasets = "2.14.5"
 sentence-transformers = "2.2.2"
 spacy = "3.6.1"
+midiutil = "^1.2.1"
+mido = "^1.3.0"
+python-rtmidi = "^1.5.6"
+pretty-midi = "^0.2.10"
+music21 = "8.3.0"
 
 [tool.poetry.dev-dependencies]
 black = { version = "23.7.0", extras = ["jupyter"] }
@@ -42,6 +47,7 @@ ruff = "0.0.278"
 [tool.poetry.group.dev.dependencies]
 toml = "^0.10.2"
 nbconvert = "^7.8.0"
+pyyaml = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
