--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ mido = "^1.3.0"
 python-rtmidi = "^1.5.6"
 pretty-midi = "^0.2.10"
 music21 = "8.3.0"
+scikit-learn = "^1.3.1"
 
 [tool.poetry.dev-dependencies]
 black = { version = "23.7.0", extras = ["jupyter"] }
